12/18/17 v19a - Minor bug fixes and added validation of all parameters. \n
12/17/17 v19 - Large UI changes which use the materialize library much more heavily. Also starts to add tooltips and confirmation dialogs. \n
12/2/17 v18a - More ways of communicating with the worker and started output page redesign. Some save features still broken. \n
11/29/17 v18 - First multithreaded version with working web worker. Also adds support for Bing map satellite data. \n
11/20/17 v17b - Additional fixes and work on the output page. \n
11/17/17 v17a - More work to results pages and first working graph. \n
11/15/17 v17 - Autosave system is working and has an interface. Last major feature to work on is the output page. \n
10/26/17 v16a - More cleanup and a few tests for the persistent storage system. \n
10/25/17 v16 - Massive backend changes to how all population data is stored and move around. Fixes using the table, allows the simulation to run offline, save/load system is much more functional and other backend cleanup. \n
10/23/17 v15 - Many ui improvements: reset button, default parameters button, rerunable simulations, populations in save files, and many bugfixes. \n
9/19/17 v14 - Save load system is working and includes several image outputs. Also start of output page. \n
9/17/17 v13 - Added basic save load system and faster way of drawing heatmap outputs. \n
9/4/17 v12a - Parameters entered in the settings and advanced settings screens are actually used now. \n
9/4/17 v12 - First version that somewhat works. Parameters are placeholder but population input is fully working. \n
9/2/17 v11 - Continue work on ui integration. Simulator is almost runnable but more table, map, simmulator data synchronization code is necessary. \n
8/28/17 v10 - Started working on integrating the modeling code into the user interface. \n
8/6/17 v9b - Added popup for finishing the population setup of a popution added through the mapview. Currently testable through the table view page. \n