@@ -111,30 +111,15 @@ div.tab button.active {
 }
 
 #persistSaveContainer {
-        max-height: 600px;
-        overflow: auto;
-        border-style: solid;
-        border-width: 1px;
-        border-color: LightGrey;
-        margin-right: 4px;
-        
+        margin: 0px 4px 0px 4px;
 }
 
-.persistSave {
-        margin: 4px;
-        background-color: WhiteSmoke;
+li.active .collapsible-header {
+        background-color: #eceff1;
 }
 
-.persistSave:hover {
-        background-color: #d9d9d9;
-}
-
-.saveButton {
-        margin-top: 5px;
-}
-
-.saveText {
-        margin-top: 6px;
+li.active .collapsible-body {
+        background-color: #eceff1;
 }
 
 .notification {
