@@ -92,7 +92,7 @@
 
                                                 </div>
                                         </div>
-                                        <div class="row" id="persistSaveContainer" class="collection"></div>
+                                        <ul id="persistSaveContainer" class="collapsible popout" data-collapsible="accordion">
                                         <div class="row" id="javascriptError">
                                                 <h3 style="color:red;">If you can see this, javascript isn't being allowed to run in your browser and this application won't work.</h3>
                                         </div>
@@ -325,10 +325,6 @@
                                                                 </div>
                                                         </div>
                                                 </div>
-                                                </li>
-                                                <li>
-                                                <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
-                                                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
                                                 </li>
                                         </ul>
                                 </div>
